[package]
name = "YTSearch"
version = "0.2.1"
edition = "2024"
license = "MIT"
default-run = "YTSearch"

[dependencies]
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "1"
urlencoding = "2"
directories = "5"
open = "5"
time = { version = "0.3", features = ["parsing", "macros", "formatting"] }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
native-dialog = "0.6"  # GUI file dialogs without GTK dependencies
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "ico", "tga", "webp"] }

[package.metadata]
default-run = "YTSearch"
